<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="119dp"
            android:layout_height="34dp"
            android:text="@string/App_Adrian"
            android:fontFamily="times new roman"/>

    <EditText
        android:id="@+id/Txt_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/Txt_Name"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Guardar"
        android:text="@string/Botton" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@null"
        android:fontFamily="times new roman"
        android:onClick="siguiente"
        android:text="@string/BotonSiguiente"
        android:textSize="24sp"
        tools:text="@string/BotonSiguiente" />




</LinearLayout>